z-index fixes

--- a/web_server/dashboard/src/styles/dashboard.less
+++ b/web_server/dashboard/src/styles/dashboard.less
@@ -20,7 +20,7 @@
     width: 6rem;
     background: @background;
 
-    z-index: 2;
+    z-index: 20;
 
     .md-3();
 
