--- a/web_server/dashboard/src/styles/modal.less
+++ b/web_server/dashboard/src/styles/modal.less
@@ -4,6 +4,7 @@
 	left: 0;
 	width: 100vw;
 	height: 100vh;
+	z-index: 5;
 
 	display: flex;
 	justify-content: center;
